<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutUsContent">What is Nodle? Nodle is a connectivity provider for the Internet of Things. The company has built a robust Bluetooth Low Energy-powered network to help companies and cities connect and collect data from their devices, sensors and tags. How does Nodle work? The Nodle Network’s architecture and system design leverage what is called “The Smartphone Infrastructure”, utilising smartphones as nodes and base stations for the network. The team at Nodle has developed an innovative way to grow the network through “proof of connectivity”. Using such method, mobile application developers and consumers compete and participate in the network by enabling their smartphones to provide resources such as wireless radio and bandwidth, and in exchange for their contribution, get rewarded with NODL Cash.</string>
    <string name="accountCreate">Create Account</string>
    <string name="accountImport">Import Account</string>
    <string name="actionGetPublicKey">io.nodle.cash.ACTION_GET_PUBLIC_KEY</string>
    <string name="analyticsDescription">Help us improve Nodle apps by sharing statistics how you use the app</string>
    <string name="analyticsTitle">Share app analytics</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="announceBtn">Got it</string>
    <string name="announceBtn1">Skip</string>
    <string name="announceBtn2">Learn More</string>
    <string name="app_name">Nodle Cash</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="backupComplete">Backup complete</string>
    <string name="backupCompleteMessage">Use your 12 word recovery phrase to restore your funds in case you lose access to your account. Anyone with access to your recovery phrase can access your funds, so keep it offline somewhere safe and secure.</string>
    <string name="backupLogout">Before disconnecting, please back up your wallet. It will allow you to recover access to your wallet. You will be shown a secret recovery phase. Write it down somewhere safe.</string>
    <string name="backupLogoutBtn">Backup your wallet</string>
    <string name="backupMessage">You will be shown a secret recovery phrase next. The recovery phrase is the only key to your wallet.\10\10Make sure to write down your recovery phrase on a piece of paper and keep it somewhere safe and secure.</string>
    <string name="backupWalletSheetAction">Generate 12 words password</string>
    <string name="backupWalletSheetText">The 12 word password will give you access to your funds. Be sure to write down your phrase on a piece of paper and keep it somewhere safe and secure.</string>
    <string name="backupWalletSheetTitle">Backup your wallet</string>
    <string name="backupWithPhrase">12 word phrase</string>
    <string name="balanceHeader">Your balance (NODL)</string>
    <string name="balanceTransfer">You have %s</string>
    <string name="bgLocPermissionBtn">Allow Background Location</string>
    <string name="bgLocPermissionRationale">You earn NODL based on the quality of data uploaded. This includes location data. When the app is closed or not in use, location may be captured in the background. \10\10Choose \'Allow all the time\' to enable background location.</string>
    <string name="bgLocPermissionTitle">Nodle Cash app needs background location permission</string>
    <string name="blank" />
    <string name="bleAlert">Allow Bluetooth to continue earning NODL</string>
    <string name="bleAlertAction">Use Bluetooth</string>
    <string name="bleOnAlert">Use Bluetooth to continue earning NODL</string>
    <string name="bleOnSheetAction">Turn on Bluetooth</string>
    <string name="bleOnSheetText">You have to turn on Bluetooth to join the Nodle network and start earning</string>
    <string name="bleOnSheetTitle">Turn on Bluetooth</string>
    <string name="blePermissionBtn">Allow Bluetooth</string>
    <string name="blePermissionRationale">Nodle captures Bluetooth IoT data around you at regular intervals. You earn NODL based on this data.</string>
    <string name="blePermissionTitle">Nodle Cash app needs Bluetooth permission</string>
    <string name="bleSheetAction">Use Bluetooth</string>
    <string name="bleSheetText">You have to turn on and allow Bluetooth to join the Nodle network and start earning</string>
    <string name="bleSheetTitle">Use Bluetooth</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="channelGeneral">General</string>
    <string name="channelGeneralDesc">General updates on everything related to Nodle</string>
    <string name="channelScan">Nodle Scan</string>
    <string name="channelScanDesc">Notification regarding Nodle scan.</string>
    <string name="channelTransact">Transactions</string>
    <string name="channelTransactDesc">Notifications regarding fund credits and debits</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkInternet">Please, check your internet connection and try again later</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">7d2e414c5631444c91cfc2c9baef4067</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="communityDescription">We would love to hear from you. We are active in our communities listed below:</string>
    <string name="confirm">Confirm</string>
    <string name="confirmLogout">Wallet disconnected!</string>
    <string name="copy">Copy</string>
    <string name="copyAppLink">Copy app link</string>
    <string name="detailAppAnalytics">Help us improve Nodle apps by sharing statistics how you use the app</string>
    <string name="done">Done</string>
    <string name="estimateInUsd">Estimate in USD</string>
    <string name="hintSearchPreSignIn">Enter public key</string>
    <string name="importFail">This phrase does not match any account. Please try again.</string>
    <string name="importPhrase">Enter the words from your recovery phrase to import your account.</string>
    <string name="logoutBtn">Skip and Disconnect</string>
    <string name="next">Next</string>
    <string name="notePhrase">Write down the following 12 words exactly in the order they appear.</string>
    <string name="previous">Previous</string>
    <string name="readPrivacy">Read privacy policy</string>
    <string name="receive">Receive</string>
    <string name="scanButtonTitle">Scan code</string>
    <string name="scanCodeDescription">Or scan other user\'s iChing code\10to send Nodle Cash</string>
    <string name="send">Send</string>
    <string name="settingsEULA">EULA</string>
    <string name="share">Share</string>
    <string name="shareAppAnalytics">Share app analytics</string>
    <string name="shareCodeDescription">Share your public key or iChing code with another user to receive Nodle Cash.</string>
    <string name="shareCodeTitle">Your public key</string>
    <string name="titleImport">12 word recovery phrase</string>
    <string name="titleLogout">Backup your wallet</string>
    <string name="titleOptions">Nodle Cash</string>
    <string name="titlePhraseBackup">12 word recovery phrase</string>
    <string name="to">To</string>
    <string name="updatesDetail">You are rich now! No, it\'s not just formatting. There is way more to it than what meets the eye.</string>
    <string name="updatesSubTitle">NC x100</string>
    <string name="updatesTitle">What\'s New</string>
    <string name="verify">Verify</string>
    <string name="verifyFail">Verification failed. Please try again</string>
    <string name="verifyPhrase">Enter the following words from your recovery phrase to complete the backup process</string>
</resources>