<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/fragment_logout_0" android:background="@color/appBackground" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/screen_margin_horizontal" android:layout_marginEnd="@dimen/screen_margin_horizontal">
    <TextView android:id="@+id/headerTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/titleLogout" style="@style/HeaderTextAppearance"/>
    <TextView android:id="@+id/detailTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/backupLogout" android:layout_below="@+id/headerTextView" style="@style/SecondaryTextAppearance"/>
    <Button android:id="@+id/backupButton" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/backupLogoutBtn" android:layout_above="@+id/logoutButton"/>
    <Button android:id="@+id/logoutButton" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="@dimen/screen_margin_vertical" android:text="@string/logoutBtn" android:layout_alignParentBottom="true" style="@style/AccentButtonAppearance"/>
</RelativeLayout>
