<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/fragment_backup_verify_0" android:background="@color/appBackground" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/screen_margin_horizontal" android:layout_marginEnd="@dimen/screen_margin_horizontal">
    <TextView android:id="@+id/titleTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/titlePhraseBackup" style="@style/HeaderTextAppearance"/>
    <TextView android:id="@+id/verifyMessageTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/verifyPhrase" android:layout_below="@+id/titleTextView" style="@style/SecondaryTextAppearance"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/verifyContainerLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:layout_below="@+id/verifyMessageTextView"/>
    <TextView android:textColor="@color/colorErrorText" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/verifyFail" android:layout_above="@+id/verifyButton"/>
    <Button android:id="@+id/verifyButton" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/verify" android:layout_alignParentBottom="true"/>
</RelativeLayout>
