<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingTop="@dimen/screen_margin_vertical" android:paddingBottom="@dimen/screen_margin_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/screen_margin_horizontal" android:paddingEnd="@dimen/screen_margin_horizontal">
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@+id/titleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/updatesTitle" style="@style/HeaderTextAppearance"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@+id/subTitleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/screen_margin_vertical" android:text="@string/updatesSubTitle" style="@style/HeaderTextAppearance"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp">
        <TextView android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/updatesDetail"/>
    </ScrollView>
    <Button android:id="@+id/doneButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/screen_margin_vertical" android:text="@string/done" style="@style/PrimaryButtonAppearance"/>
</LinearLayout>
