<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/fragment_sheet_receive_0" android:background="@drawable/background_bottom_sheet" android:paddingBottom="32dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:gravity="center" android:id="@+id/titleTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/shareCodeTitle" android:layout_marginStart="40dp" android:layout_marginEnd="40dp" style="@style/SecondaryTextAppearance"/>
    <TextView android:gravity="center" android:id="@+id/detailTextView" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/shareCodeDescription" android:layout_below="@+id/titleTextView" android:layout_marginStart="40dp" android:layout_marginEnd="40dp"/>
    <RelativeLayout android:id="@+id/pkLayout" android:background="@drawable/background_border" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:layout_below="@+id/detailTextView" android:layout_marginStart="@dimen/screen_margin_horizontal" android:layout_marginEnd="@dimen/screen_margin_horizontal">
        <Button android:textSize="11sp" android:id="@+id/shareButton" android:tag="binding_1" android:layout_width="68dp" android:layout_height="32dp" android:layout_marginTop="24dp" android:text="@string/share" android:layout_marginEnd="24dp" android:layout_alignParentEnd="true" style="@style/AccentBorderedButtonAppearance"/>
        <ImageView android:id="@+id/iChingImageView" android:visibility="gone" android:layout_width="200dp" android:layout_height="200dp" android:layout_below="@+id/shareButton" android:layout_centerHorizontal="true"/>
        <TextView android:gravity="center" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="24dp" android:layout_below="@+id/iChingImageView" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@+id/detailTextView2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/scanCodeDescription" android:layout_below="@+id/pkLayout" android:layout_marginStart="40dp" android:layout_marginEnd="40dp" style="@style/SecondaryTextAppearance"/>
    <Button android:textSize="13sp" android:id="@+id/actionButton" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="@string/scanButtonTitle" android:layout_below="@+id/detailTextView2" android:layout_marginStart="40dp" android:layout_marginEnd="40dp"/>
    <ImageButton android:id="@+id/closesButton" android:tag="binding_3" android:padding="12dp" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginTop="8dp" android:src="@drawable/ic_close" android:layout_marginEnd="8dp" android:layout_alignParentEnd="true" style="@style/IconButtonAppearance"/>
</RelativeLayout>
