<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/appBackground" android:paddingBottom="@dimen/screen_margin_vertical" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/screen_margin_horizontal" android:paddingEnd="@dimen/screen_margin_horizontal">
    <include android:id="@+id/toolbar" layout="@layout/toolbar_transact"/>
    <TextView android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/toolbar" style="@style/HeaderTextAppearance"/>
    <EditText android:id="@+id/accountEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hintSearchPreSignIn" android:scrollHorizontally="false" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView android:textSize="12sp" android:textColor="@color/colorErrorText" android:id="@+id/errorTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/accountEditText" style="@style/SecondaryTextAppearance"/>
    <Button android:id="@+id/addressDoneButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/done" app:layout_constraintBottom_toBottomOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
