<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/appBackground" android:paddingTop="@dimen/screen_margin_vertical" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/screen_margin_horizontal" android:paddingEnd="@dimen/screen_margin_horizontal">
    <RelativeLayout android:background="@drawable/background_window" android:paddingTop="@dimen/screen_margin_vertical" android:paddingBottom="@dimen/screen_margin_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/screen_margin_horizontal" android:paddingEnd="@dimen/screen_margin_horizontal">
        <TextView android:id="@+id/analyticsTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shareAppAnalytics" android:layout_alignBaseline="@+id/analyticsSwitch"/>
        <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/analyticsSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true"/>
        <TextView android:textSize="@dimen/settings_hint_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/detailAppAnalytics" android:layout_below="@+id/analyticsTextView" style="@style/SecondaryTextAppearance"/>
    </RelativeLayout>
    <TextView android:id="@+id/item_privacy_read" android:background="@drawable/background_window" android:paddingLeft="@dimen/screen_margin_horizontal" android:paddingTop="@dimen/screen_margin_vertical" android:paddingRight="@dimen/screen_margin_horizontal" android:paddingBottom="@dimen/screen_margin_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/readPrivacy" android:paddingHorizontal="@dimen/screen_margin_horizontal" android:paddingVertical="@dimen/screen_margin_vertical" app:drawableEndCompat="@drawable/ic_clickable" app:drawableTint="@color/textSecondaryV2"/>
    <TextView android:id="@+id/item_eula" android:background="@drawable/background_window" android:paddingLeft="@dimen/screen_margin_horizontal" android:paddingTop="@dimen/screen_margin_vertical" android:paddingRight="@dimen/screen_margin_horizontal" android:paddingBottom="@dimen/screen_margin_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/settingsEULA" android:paddingHorizontal="@dimen/screen_margin_horizontal" android:paddingVertical="@dimen/screen_margin_vertical" app:drawableEndCompat="@drawable/ic_clickable" app:drawableTint="@color/textSecondaryV2"/>
</LinearLayout>
